--- a/src/LOMs.Api/appsettings.Development.json
+++ b/src/LOMs.Api/appsettings.Development.json
@@ -4,5 +4,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Smtp": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "your-email@gmail.com",
+    "Password": "yourpassword",
+    "EnableSsl": true,
+    "From": "noreply@myapp.com"
   }
+
 }
