feat(Domain Event): add employee created event and add smtp sender handler

--- a/src/LOMs.Api/appsettings.Development.json
+++ b/src/LOMs.Api/appsettings.Development.json
@@ -8,10 +8,10 @@
   "Smtp": {
     "Host": "smtp.gmail.com",
     "Port": 587,
-    "Username": "your-email@gmail.com",
-    "Password": "yourpassword",
+    "Username": "teamaramm@gmail.com",
+    "Password": "arwf jjcu mcin tdhi",
     "EnableSsl": true,
-    "From": "noreply@myapp.com"
+    "From": "teamaramm@gmail.com"
   }
 
 }
