--- a/src/LOMs.Infrastructure/LOMs.Infrastructure.csproj
+++ b/src/LOMs.Infrastructure/LOMs.Infrastructure.csproj
@@ -21,6 +21,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.8" />
   </ItemGroup>
 
   <ItemGroup>
