feat: Auth Controller done

--- a/src/LOMs.Api/appsettings.Development.json
+++ b/src/LOMs.Api/appsettings.Development.json
@@ -5,6 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "YourVerySecureKeyHereAtLeast32CharsLong",
+    "Issuer": "LOMsLawOffice",
+    "Audience": "LOMsLawOfficeApi",
+    "ExpiryMinutes": "60"
+  },
+  "PasswordGenerator": {
+    "key": "YourVerySecure16ByteKey123"
+  },
   "Smtp": {
     "Host": "smtp.gmail.com",
     "Port": 587,
